src/less/styles.less
body {
	padding-top: 70px;
}

header{
	&:after{
		content: "";
		display: table;
		clear: both;
	}
	border-bottom: 1px solid black;
}


footer{
	font-size: 80%;
	padding-top: 100px;
	text-align: center;
}
iframe{
	margin-top: 20px;
}

